<resources>
    <string name="app_name">D.life</string>
    <string name="text_Name">Spot diary</string>
    <string name="text_Submit">Submit</string>
    <string name="text_InvalidName">請輸入日記內容</string>
    <string name="text_SpotNotFound">Spot not found</string>
    <string name="AccountID">Account</string>
    <string name="LoginPassword">Password</string>
    <string name="login">Log in</string>
    <string name="Reset">Reset</string>
    <string name="hello_blank_fragment">Helloblankfragment</string>
    <string name="msg_NoNewsFound">您的搜尋範圍內沒有日記</string>
    <string name="msg_NoNetwork">NoNetwork</string>
    <string name="PersonalFile">My profile</string>
    <string name="myNickName">Nickname</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="lastLoginDate">Login</string>
    <string name="lady">Lady</string>
    <string name="man">Man</string>
    <string name="ChangePassword">Password</string>
    <string name="NewPassword">New Password</string>
    <string name="ChangeNickname">Nickname</string>
    <string name="NewNickName">new nickname</string>
    <string name="ChangeBirthday">Birthday</string>
    <string name="initBirthday">Your birthday</string>
    <string name="ChangeGender">Gender</string>
    <string name="facebook_app_id">168926520384746</string>
    <string name="fb_login_protocol_scheme">fb168926520384746</string>
    <string name="msg_NoThisFriend">You don\'t have a friend!</string>
    <string name="msg_FriendHasNoDiary">Your friend has no diary.</string>
    <string name="facebook">FB friends</string>
    <string name="facebookLogin">Login with Facebook</string>

</resources>
